<resources>
    <string name="app_name">AutoMekaniko</string>
    <string name="nav_home">Home</string>
    <string name="nav_settings">Settings</string>
    <string name="settings_reset_progress">Reset All Progress</string>
    <string name="settings_icon_desc">Settings Icon</string>
    <string name="units_icon_desc">Measurement Units Icon</string>
    <string name="dashboard_icon_desc">Dashboard Customization Icon</string>
    <string name="checklist_icon_desc">Checklist Management Icon</string>
    <string name="about_icon_desc">About Icon</string>
    <string name="question_mark">\?</string>
</resources>